--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -17,19 +17,19 @@
     <div class="collapse navbar-collapse menu-container" id="navbarSupportedContent">
       <ul class="navbar-nav p-2">
         <li class="nav-item">
-          <a class="nav-link" href="#">Home</a>
+          <a class="nav-link" routerLink="/home" routerLinkActive="active" >Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">About</a>
+          <a class="nav-link" routerLink="/about" routerLinkActive="active" >About</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">Skills</a>
+            <a class="nav-link" routerLink="/skills" routerLinkActive="active">Skills</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Works</a>
+            <a class="nav-link"routerLink="/works" routerLinkActive="active">Works</a>
 
           </li> <li class="nav-item d-lg-none">
-            <a class="nav-link" href="#">Contact</a>
+            <a class="nav-link" routerLink="/contact" routerLinkActive="active">Contact</a>
           </li>
       </ul>
       <button class="btn btn-primary d-none d-lg-block mx-4 px-4">Contact</button>
