--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -4,7 +4,7 @@
              
 
                
-            <div class="col-12 col-md-6 ">
+            <div class="col-12 col-md-6  " [@slideInOutLeft] >
             <div class="d-flex flex-column container-img justify-content-center align-items-start ">
                 <h1 class=" text-center title-main">
                    Hi <span>👋</span>  I am Carlos
@@ -23,22 +23,25 @@
 
                 
            <div class="d-flex my-4 w-100 gap-4">
-            <a href="
-            ">
+            <a href="http://Google.com">
             <img src="./assets/images/git.png"  class="red-social">
         </a>
          
             <img src="./assets/images/insta.png"  class="red-social">
-            <img src="assets/images/linkedin.png"  class="red-social ">
+            <a href="#">
+                <img src="assets/images/linkedin.png"  class="red-social ">
+            </a>
+           
             <img src="assets/images/twitter.png"  class="red-social  ">
         </div>
             </div>
            </div>
 
-           <div class="d-none d-md-block col-md-6 col-lg-5">
-            <div class="">
-                <img src="assets/images/programmer.png"  class="img-fluid">
-            </div>
+
+           <div class="d-none d-md-block col-md-6 col-lg-5  wrapper-animation"  >
+          
+                <img src="assets/images/programmer.png"  class="img-fluid" [@slideInOutRight]>
+           
            </div>
 
 
