add hash for routes

--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -2,7 +2,7 @@
     <div class="container">
     
 
-      <div class="container-logo">
+      <div class="container-logo" [@fadeInOut]>
         <div class="logo">
           <img src="assets/images/logoPortfolio.png" alt="" class="img-fluid">   
         </div>
