se crea paginas faltantes

--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -32,7 +32,7 @@
             <a class="nav-link" routerLink="/contact" routerLinkActive="active">Contact</a>
           </li>
       </ul>
-      <button class="btn btn-primary d-none d-lg-block mx-4 px-4">Contact</button>
+      <button class="btn btn-primary d-none d-lg-block mx-4 px-4 " routerLink="/contact">Contact</button>
     </div>
 
 </div>
