--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,1 +1,63 @@
-<p>about works!</p>
+
+<div class="container padding-r">
+
+    <div class="row align-items-center justify-content-between vh " [@slideInOutBottom]>
+        
+        <div class=" col-12 col-md-6 col-lg-5  wrapper-animation"  >
+            <img src="assets/images/who.png"  class="img-fluid" >
+       </div>
+        <div class="col-md-6 col-12" >
+            <div class="d-flex flex-column">
+               <h1 class="title-port text-center mb-4">¿Who Am I?</h1>
+              <p class="mt-4">
+                Greetings, I'm Carlos Fernando Mamani, a final-year student at the National University of Jujuy (UNJU), Argentina. I'm passionate about software development, specializing in backend technologies like Spring Java, while also skilled in frontend development.
+              </p>
+              <p>
+                During my academic journey, I've worked on notable projects, including simulating banking operations and creating a real-time delivery system. I'm committed to excellence and continuous learning in software development. If you'd like to learn more or discuss potential collaborations, feel free to reach out.
+              </p>
+           
+            </div>
+        </div>
+
+
+    </div>
+
+</div>
+
+<div class="container-fluid bg-black">
+
+    <div class="container">
+
+        <div class="row align-items-center justify-content-between vh" [@slideInOutBottom] >
+
+            <div class="col-md-6">
+                <h1 class="title-port text-center text-white" >Background Academic</h1>
+               
+                <ul class="timeline ">
+                    <li>
+                        <a >Unju - University</a>
+                        <a class="float-right">2021 - 2023</a>
+                        <p>Analista Programador Universitario</p>
+                    </li>
+                    <li>
+                        <a>Course Udemy</a>
+                        <a  class="float-right">2020 - 2021</a>
+                        <p>Master in JavaScript-Angular - Victor Robles</p>
+                    </li>
+                    <li>
+                        <a>Course Udemy</a>
+                        <a  class="float-right">2020 - 2021</a>
+                        <p>Master in PHP - Victor Robles</p>
+                    </li>
+                </ul>
+       
+            </div>
+    
+            <div class="d-none d-md-block col-md-6 col-lg-5  wrapper-animation"  >
+                <img src="assets/images/grad.png"  class="img-fluid" >
+           </div>
+    
+        </div>
+    </div>
+
+</div>
