--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -1,1 +1,65 @@
-<p>contact works!</p>
+<div class="container ">
+    <div class="row flex-column align-items-center justify-content-center  vh gap-4" >
+
+        
+      <div class="col-12 mt-4 mb-4" [@slideInOutRight]>
+        <h1 class="title-port  text-center" >¡Contact With Me!</h1>
+      </div>
+   
+        <div class="col-12 mt-4" >
+       
+        <div class="row justify-content-between">
+     <div class="col-md-5 col-12 shadow p-4 mb-4 bg-white rounded">
+        <div class="row justify-content-center tarjet">
+            <div class="col-2 mb-4">  
+                <img src="assets/images/whatsapp.png" class="img-fluid" alt="">
+            </div>
+            <div class="col-12 mb-3">
+                 <h3 class="text-center">Whatsapp</h3>
+            </div>
+          <div class="col-12">
+            <p class="text-center">
+                You can contact me via WhatsApp, I normally respond within 2 hours
+            </p>
+          </div>
+          <div class="col-md-4 col-6 ">
+            <div class="d-flex justify-content-center align-items-center">
+               <a href="https://api.whatsapp.com/send/?phone=543885792151&text&type=phone_number&app_absent=0" target="_blank"> <button class="btn btn-secondary">Send</button></a>
+            </div>
+           
+          </div>
+
+        </div>
+     </div>
+   
+
+     <div class="col-md-5 col-12 shadow p-4  mb-4 bg-white rounded ">
+        <div class="row justify-content-center tarjet">
+            <div class="col-2 mb-4">  
+                <img src="assets/images/email.png" class="img-fluid" alt="">
+            </div>
+            <div class="col-12 mb-3">
+                 <h3 class="text-center">Email</h3>
+            </div>
+          <div class="col-12">
+            <p class="text-center">
+                You can contact me via email, I normally respond within 24 hours
+            </p>
+          </div>
+          <div class="col-md-4 col-6 ">
+            <div class="d-flex justify-content-center align-items-center">
+               <a href="mailto:carlosfernandodeveloper@gmail.com" > <button class="btn btn-secondary">Email</button></a>
+            
+            </div>
+           
+          </div>
+
+        </div>
+     </div>
+    </div>
+        
+  </div>
+    
+        
+    </div>
+</div>
