--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -17,22 +17,22 @@
                 </p>
 
                 <div class="d-flex justify-content-start align-items-start flex-row w-100 mb-4 ">
-                    <button class="btn btn-primary">Works</button>
+                   <a  href="" [routerLink]="['/works']"><button class="btn btn-primary">Works</button></a>
                     <button class="btn btn-primary mx-4">Resume</button>
                 </div>
 
                 
            <div class="d-flex my-4 w-100 gap-4">
-            <a href="http://Google.com">
+            <a href="#">
             <img src="./assets/images/git.png"  class="red-social">
         </a>
          
-            <img src="./assets/images/insta.png"  class="red-social">
+            <a href="#"><img src="./assets/images/insta.png"  class="red-social"></a>
             <a href="#">
                 <img src="assets/images/linkedin.png"  class="red-social ">
             </a>
            
-            <img src="assets/images/twitter.png"  class="red-social  ">
+         <a href="#">   <img src="assets/images/twitter.png"  class="red-social  "></a>
         </div>
             </div>
            </div>
