--- a/src/app/pages/skills/skills.component.html
+++ b/src/app/pages/skills/skills.component.html
@@ -1,1 +1,78 @@
-<p>skills works!</p>
+<div class="container ptb-120 ">
+
+    <div class="row align-items-center justify-content-start" >
+
+
+
+        <div class="col-12" >
+
+
+            <div class="border-top my-3">
+                <h6>Tecnology</h6>
+            </div>
+            <div class="row justify-content-start align-items-center">
+                <div class="col-1">
+                    <img src="assets/icons/spring.svg" class="img-fluid" alt="">
+                </div>
+                <div class="col-1">
+                    <img src="assets/icons/angular.svg" alt="Texto flotante" class="img-fluid" alt="">
+                </div>
+                <div class="col-1">
+                    <img src="assets/icons/nodejs.svg" alt="Texto flotante" class="img-fluid" alt="">
+                </div>
+                 <div class="col-1">
+                    <img src="assets/icons/java.svg" alt="Texto flotante" class="img-fluid" alt="">
+                </div>
+            </div>
+        </div>
+
+        <div class="col-12" >
+
+
+            <div class="border-top my-3">
+                <h6>Databases</h6>
+            </div>
+            <div class="row justify-content-start align-items-center">
+                <div class="col-1">
+                    <img src="assets/icons/mysql-logo.svg" class="img-fluid" alt="">
+                </div>
+                <div class="col-1">
+                    <img src="assets/icons/mongodb-icon-1.svg" alt="Texto flotante" class="img-fluid" alt="">
+                </div>
+                
+            </div>
+        </div>
+
+        <div class="col-12" >
+            <div class="border-top my-3">
+                <h6>Systems</h6>
+            </div>
+            <div class="row justify-content-start align-items-center">
+                <div class="col-1">
+                    <img src="assets/icons/windows.svg" class="img-fluid" alt="">
+                </div>
+                <div class="col-1">
+                    <img src="assets/icons/linux.svg" alt="Texto flotante" class="img-fluid" alt="">
+                </div>
+            </div>
+        </div>
+        <div class="col-12" >
+            <div class="border-top my-3">
+                <h6>Tools</h6>
+            </div>
+            <div class="row justify-content-start align-items-center">
+                <div class="col-1">
+                    <img src="assets/icons/git-icon.svg" class="img-fluid" alt="">
+                </div>
+                <div class="col-1">
+                    <img src="assets/icons/ilustrator.svg" alt="Texto flotante" class="img-fluid" alt="">
+                </div>
+                <div class="col-1">
+                    <img src="assets/icons/docker.svg" alt="Texto flotante" class="img-fluid" alt="">
+                </div>
+            </div>
+        </div>
+
+    </div>
+
+</div>
