--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,11 +1,10 @@
-<div class="container">
-        <div class="row container-img justify-content-between align-items-center ">
+<div class="container-img ptb">
+    <div class="container">
 
-             
-
+        <div class="row justify-content-between align-items-center ">
                
             <div class="col-12 col-md-6  " [@slideInOutLeft] >
-            <div class="d-flex flex-column container-img justify-content-center align-items-start ">
+            <div class="d-flex flex-column  justify-content-center align-items-start ">
                 <h1 class=" text-center title-main">
                    Hi <span>👋</span>  I am Carlos
                 </h1>
@@ -47,4 +46,5 @@
 
         </div>
 
+    </div>
 </div>
