--- a/src/app/pages/about/about.component.css
+++ b/src/app/pages/about/about.component.css
@@ -3,11 +3,13 @@
     
 }
 
-
 .padding-r{
-    padding-top: 10px;
+    padding-top: 120px;
 }
-@media (min-width:991px){
+
+
+@media (min-width:767px)
+{
     .padding-r{
         padding-top: 0px;
     }
