se termina la pagina de skills

--- a/src/app/pages/skills/skills.component.html
+++ b/src/app/pages/skills/skills.component.html
@@ -1,78 +1,196 @@
 <div class="container ptb-120 ">
 
-    <div class="row align-items-center justify-content-start" >
+    <div class="row align-items-center justify-content-start " [@slideInOutBottom]>
 
 
+        <div class=" my-3">
+            <h6>Tecnology</h6>
+        </div>
+        <div class="col-12 mb-4" >
+            <div class="row shadow-sm ">
 
-        <div class="col-12" >
+                <div class="col-12 col-sm-4 col-md-3 ">
 
+                    <div class="row justify-content-start align-items-center h-100">
+                        <div class="col-3 col-sm-6 col-lg-3">
+                            <img src="assets/icons/spring.svg" class="img-fluid" alt="">
+                        </div>
+                        <div class="col-3 col-sm-6 col-lg-3">
+                            <img src="assets/icons/java.svg" alt="Texto flotante" class="img-fluid" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-8 col-md-9" >
 
-            <div class="border-top my-3">
-                <h6>Tecnology</h6>
+                    <div class="d-flex flex-column justify-content-center align-items-start h-100">
+                        <p class="text-tecn">
+                            These technologies are my strong suit, and I have been working in this field for almost 2 years
+                        </p>
+                        <ul >
+                            <li>
+                                Spring Security
+                            </li>
+                            <li>
+                                Spring Data JPA
+                            </li>
+                            <li>
+                                Spring Boot
+                            </li>
+                            <li>
+                                OOP
+                            </li>
+                        </ul>
+                    </div>
+
+                  
+
+                </div>
+               
             </div>
-            <div class="row justify-content-start align-items-center">
-                <div class="col-1">
-                    <img src="assets/icons/spring.svg" class="img-fluid" alt="">
+
+        
+        </div>
+        <!---div-->
+
+      
+        <div class="col-12  mb-4" >
+            <div class="row shadow-sm ">
+
+                <div class="col-12 col-sm-4 col-md-3 ">
+
+                    <div class="row justify-content-start align-items-center h-100">
+                        <div class="col-3 col-sm-6 col-lg-3">
+                            <img src="assets/icons/angular.svg" class="img-fluid" alt="">
+                        </div>
+                        <div class="col-3 col-sm-6 col-lg-3">
+                            <img src="assets/icons/nodejs.svg" alt="Texto flotante" class="img-fluid" alt="">
+                        </div>
+                    </div>
                 </div>
-                <div class="col-1">
-                    <img src="assets/icons/angular.svg" alt="Texto flotante" class="img-fluid" alt="">
+                <div class="col-12 col-sm-8 col-md-9" >
+
+                    <div class="d-flex flex-column justify-content-center align-items-start h-100">
+                        <p class="text-tecn">
+                            I have also worked on the frontend side, consuming apis and designing attractive pages.</p>
+                    </div>
+
+                  
+
                 </div>
-                <div class="col-1">
-                    <img src="assets/icons/nodejs.svg" alt="Texto flotante" class="img-fluid" alt="">
-                </div>
-                 <div class="col-1">
-                    <img src="assets/icons/java.svg" alt="Texto flotante" class="img-fluid" alt="">
-                </div>
+               
             </div>
+
+        
+        </div>
+          <!---div-->
+
+          <div class=" my-3">
+            <h6>Databases</h6>
+        </div>
+          <div class="col-12  mb-4" >
+            <div class="row shadow-sm ">
+
+                <div class="col-12 col-sm-4 col-md-3 ">
+
+                    <div class="row justify-content-start align-items-center h-100">
+                        <div class="col-3 col-sm-6 col-lg-3">
+                            <img src="assets/icons/mongodb-icon-1.svg" class="img-fluid" alt="">
+                        </div>
+                        <div class="col-3 col-sm-6 col-lg-3">
+                            <img src="assets/icons/mysql-logo.svg" alt="Texto flotante" class="img-fluid" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-8 col-md-9" >
+
+                    <div class="d-flex flex-column justify-content-center align-items-start h-100">
+                        <p class="text-tecn">
+                            I have experience working mainly with relational databases, SQL and ORM in the last one I have done projects using MongoDB. 
+                        </p>
+                    </div>
+
+                  
+
+                </div>
+               
+            </div>
+
+        
         </div>
 
-        <div class="col-12" >
+        <div class=" my-3">
+            <h6>Tools</h6>
+        </div>
+          <div class="col-12  mb-4" >
+            <div class="row shadow-sm ">
 
+                <div class="col-12 col-sm-4 col-md-3 ">
 
-            <div class="border-top my-3">
-                <h6>Databases</h6>
-            </div>
-            <div class="row justify-content-start align-items-center">
-                <div class="col-1">
-                    <img src="assets/icons/mysql-logo.svg" class="img-fluid" alt="">
+                    <div class="row justify-content-start align-items-center h-100">
+                        <div class="col-3 col-sm-6 col-lg-3">
+                            <img src="assets/icons/docker.svg" class="img-fluid" alt="">
+                        </div>
+                        <div class="col-3 col-sm-6 col-lg-3">
+                            <img src="assets/icons/git-icon.svg" alt="Texto flotante" class="img-fluid" alt="">
+                        </div>
+                        <div class="col-3 col-sm-6 col-lg-3">
+                            <img src="assets/icons/ilustrator.svg" alt="Texto flotante" class="img-fluid" alt="">
+                        </div>
+                    </div>
                 </div>
-                <div class="col-1">
-                    <img src="assets/icons/mongodb-icon-1.svg" alt="Texto flotante" class="img-fluid" alt="">
+                <div class="col-12 col-sm-8 col-md-9" >
+
+                    <div class="d-flex flex-column justify-content-center align-items-start h-100">
+                        <p class="text-tecn">
+                            GIT , DOCKER tools that I use daily to code and test microservices. Adobe Illustrator to create Vectors for my designs.
+                        </p>
+
+                    </div>
+
+                  
+
                 </div>
-                
+               
             </div>
+
+        
+        </div>
+        <div class=" my-3">
+            <h6>S.O</h6>
+        </div>
+          <div class="col-12  mb-4" >
+            <div class="row shadow-sm ">
+
+                <div class="col-12 col-sm-4 col-md-3 ">
+
+                    <div class="row justify-content-start align-items-center h-100">
+                        <div class="col-3 col-sm-6 col-lg-3">
+                            <img src="assets/icons/linux.svg" class="img-fluid" alt="">
+                        </div>
+                        <div class="col-3 col-sm-6 col-lg-3">
+                            <img src="assets/icons/windows.svg" alt="Texto flotante" class="img-fluid" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-8 col-md-9" >
+
+                    <div class="d-flex flex-column justify-content-center align-items-start h-100">
+                        <p class="text-tecn">
+                            Windows used all my life and linux I have gone through Arch linux, Manjaro and Debian to build servers.
+                        </p>
+                     
+                    </div>
+
+                  
+
+                </div>
+               
+            </div>
+
+        
         </div>
 
-        <div class="col-12" >
-            <div class="border-top my-3">
-                <h6>Systems</h6>
-            </div>
-            <div class="row justify-content-start align-items-center">
-                <div class="col-1">
-                    <img src="assets/icons/windows.svg" class="img-fluid" alt="">
-                </div>
-                <div class="col-1">
-                    <img src="assets/icons/linux.svg" alt="Texto flotante" class="img-fluid" alt="">
-                </div>
-            </div>
-        </div>
-        <div class="col-12" >
-            <div class="border-top my-3">
-                <h6>Tools</h6>
-            </div>
-            <div class="row justify-content-start align-items-center">
-                <div class="col-1">
-                    <img src="assets/icons/git-icon.svg" class="img-fluid" alt="">
-                </div>
-                <div class="col-1">
-                    <img src="assets/icons/ilustrator.svg" alt="Texto flotante" class="img-fluid" alt="">
-                </div>
-                <div class="col-1">
-                    <img src="assets/icons/docker.svg" alt="Texto flotante" class="img-fluid" alt="">
-                </div>
-            </div>
-        </div>
 
-    </div>
 
+        </div>
 </div>
