--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,8 +1,7 @@
 
-<div class="container padding-r">
+<div class="container">
 
-    <div class="row align-items-center justify-content-between vh " [@slideInOutBottom]>
-        
+    <div class="row align-items-start padding-r justify-content-between vh " [@slideInOutBottom]>
         <div class=" col-12 col-md-6 col-lg-5  wrapper-animation"  >
             <img src="assets/images/who.png"  class="img-fluid" >
        </div>
@@ -18,10 +17,7 @@
            
             </div>
         </div>
-
-
     </div>
-
 </div>
 
 <div class="container-fluid bg-black">
