--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -16,22 +16,22 @@
                 </p>
 
                 <div class="d-flex justify-content-start align-items-start flex-row w-100 mb-4 ">
-                   <a  href="" [routerLink]="['/works']"><button class="btn btn-primary">Works</button></a>
-                    <button class="btn btn-primary mx-4">Resume</button>
+                   <a   [routerLink]="['/works']"><button class="btn btn-primary">Works</button></a>
+                     <a href="https://drive.google.com/file/d/1q5vEFN8o1z2G-QOpggNlK2X8kPYVnqgI/view?usp=sharing" target="_blank"><button class="btn btn-primary mx-4">Resume</button></a>
                 </div>
 
                 
            <div class="d-flex my-4 w-100 gap-4">
-            <a href="#">
+            <a href="https://github.com/CarlosFernando21334?tab=repositories" target="_blank">
             <img src="./assets/images/git.png"  class="red-social">
         </a>
          
-            <a href="#"><img src="./assets/images/insta.png"  class="red-social"></a>
-            <a href="#">
+            <a href="https://www.instagram.com/carlosfernandook/?next=%2F" target="_blank"><img src="./assets/images/insta.png"  class="red-social"></a>
+            <a href="https://www.linkedin.com/in/carlos-fernando-mamani-798a57292" target="_blank">
                 <img src="assets/images/linkedin.png"  class="red-social ">
             </a>
            
-         <a href="#">   <img src="assets/images/twitter.png"  class="red-social  "></a>
+         <a href="https://twitter.com/CarlosF37199327" target="_blank">   <img src="assets/images/twitter.png"  class="red-social  "></a>
         </div>
             </div>
            </div>
